fixed buttons in media

--- a/media.html
+++ b/media.html
@@ -21,11 +21,13 @@
 <h2>-------------------------------</h2>
 <h1 id="rolig">ROLIGARE DELEN</h1>
 <p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden.</p>
-<p id="youtube"><b><a href="https://www.youtube.com/alexanderwake" target="_blank">YOUTUBE</a></b></p>
+<a id="youtube" href="https://youtube.com/alexanderwake"
+  type="button" class="button">YOUTUBE</a>
 <p>denna knapp leder dig till min youtube kanal.</p>
-<p id="steam"><b><a href="https://steamcommunity.com/profiles/76561198117467646" target="_blank">STEAM</a></b></p>
+<a id="steam" href="https://steamcommunity.com/profiles/76561198117467646"
+  type="button" class="button">STEAM</a>
 <p>min steam profil</p>
-<p id="twitch"><b><a href="https://www.twitch.tv/alexanderwaken" target="_blank">TWITCH</a></b></p>
+<a id="twitch_button" href="https://www.twitch.tv/alexanderwaken" type="button" class="button">TWITCH</a>
 <p>min twitch kanal</p>
 </body>
 </html>
