nav fixes again

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
    <title>Document</title>
 
  </head>
- <body> 
+ <body>
    <nav id="navmain">
      <ul>
       <li><a class="active" href="index.html">Start</a></li>
-      <li><a href="info.html">Information</a></li>
+      <li><a href="info.html">Info</a></li>
       <li><a href="kontakt.html">Kontaktuppgifter</a></li>
       <li><a href="media.html">Medier</a></li>
      </ul>
