--- a/kontakt.html
+++ b/kontakt.html
@@ -12,7 +12,7 @@
   <nav id="navmain">
     <ul>
      <li><a href="index.html">Start</a></li>
-     <li><a href="info.html">Information</a></li>
+     <li><a href="info.html">Info</a></li>
      <li><a class="active" href="kontakt.html">Kontaktuppgifter</a></li>
      <li><a href="media.html">Medier</a></li>
     </ul>
