fixed navbar again you know right?

--- a/index.html
+++ b/index.html
@@ -9,21 +9,20 @@
 
  </head>
  <body>
-   <nav id="navmain">
-     <ul>
+   <nav id="navmain" class="pagerow">
+     <ul id="navul">
       <li><a class="active" href="index.html">Start</a></li>
       <li><a href="info.html">Info</a></li>
       <li><a href="kontakt.html">Kontaktuppgifter</a></li>
       <li><a href="media.html">Medier</a></li>
      </ul>
-
    </nav>
-   <h2>-</h2>
+   <div id="page-settings">
 <h1 id="välkommenHeader">VÄLKOMMEN</h1>
 <h1 id="engelska">WELCOME</h1>
 <h1 id="ryska">желанный</h1>
 <p id="förstapara">det här är min anslolut första hemsida så färvänta dig inte något som ser bra ut.</p>
-<p>sidan kommer att uppdateras och byggas om under en viss tid. man kan säga att sidan är i beta läge</p>
+<p>sidan kommer att uppdateras och byggas om under en viss tid. man kan säga att sidan är i beta läge</p> </div>
 
 
 
