--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav id="navmain">
-    <ul>
+    <ul id="navul">
      <li><a href="index.html">Start</a></li>
      <li><a class="active" href="info.html">Info</a></li>
      <li><a href="kontakt.html">Kontaktuppgifter</a></li>
@@ -18,7 +18,9 @@
     </ul>
 
   </nav>
-<h2>-------------------------------</h2>
+  <div id="page-settings">
+
+  </div>
 <h1 id="info">INFORMATION OM MIG</h1>
 <p>Mitt namn är Alexander Lusth och jag går el och energi programmet på fyrvalla med en inriktning till dator och komunikations teknik. </p>
 <h1 id="praktik">PRAKTIK PLATSER</h1>
@@ -32,6 +34,7 @@
 <h3>1. SVENSKA</h3>
 <h3>2. ENGELSKA</h3>
 <h3>3. TYSKA (lite)</h3>
+</div>
 
 
 
