--- a/media.html
+++ b/media.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav id="navmain">
-    <ul>
+    <ul id navul>
      <li><a href="index.html">Start</a></li>
      <li><a href="info.html">Info</a></li>
      <li><a href="kontakt.html">Kontaktuppgifter</a></li>
@@ -18,7 +18,9 @@
     </ul>
 
   </nav>
-<h2>-------------------------------</h2>
+<div id="page-settings">
+
+</div>
 <h1 id="rolig">ROLIGARE DELEN</h1>
 <p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden.</p>
 <a id="youtube" href="https://youtube.com/alexanderwake"
@@ -29,5 +31,6 @@
 <p>min steam profil</p>
 <a id="twitch_button" href="https://www.twitch.tv/alexanderwaken" type="button" class="button">TWITCH</a>
 <p>min twitch kanal</p>
+</div>
 </body>
 </html>
