--- a/kontakt.html
+++ b/kontakt.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav id="navmain">
-    <ul>
+    <ul id="navul">
      <li><a href="index.html">Start</a></li>
      <li><a href="info.html">Info</a></li>
      <li><a class="active" href="kontakt.html">Kontaktuppgifter</a></li>
@@ -18,11 +18,13 @@
     </ul>
 
   </nav>
-<h2>-------------------------------</h2>
+<div id="page-settings">
+
+</div>
 <h1 id="kontakt">KONTAKTUPPGIFTER</h1>
 <p>Telefon 0761423664</p>
 <p>Mail address. alexander0906@live.se</p>
 <p>Kontaktuppgifter senast uppdaterad 2018-09-13</p>
-
+</div>
 </body>
 </html>
