--- a/media.html
+++ b/media.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav id="navmain">
-    <ul id navul>
+    <ul id="navul">
      <li><a href="index.html">Start</a></li>
      <li><a href="info.html">Info</a></li>
      <li><a href="kontakt.html">Kontaktuppgifter</a></li>
