small change to text

--- a/info.html
+++ b/info.html
@@ -28,7 +28,7 @@
 <h3>1. VVS Avdelingen i bergs kommun. 3 veckor</h3>
 <h3>2. IT Avdelningen i bergs kommun. 3 veckor och 2 dagar.</h3>
 <h3>3. ICA i Svenstavik. 5 veckor.</h3>
-<h3>4. Crossbannan i Svebstavik. 3 veckor.</h3>
+<h3>4. Crossbanan i Svebstavik. 3 veckor.</h3>
 <h3>5. EL-TEL i Östresund 6 veckor.</h3>
 <h1>SPRÅK JAG LÄRT MIG</h1>
 <h3>1. SVENSKA</h3>
