--- a/media.html
+++ b/media.html
@@ -10,11 +10,11 @@
 </head>
 <body>
   <nav id="navmain">
-    <ul id="navul">
-     <li><a href="index.html">Start</a></li>
-     <li><a href="info.html">Info</a></li>
-     <li><a href="kontakt.html">Kontaktuppgifter</a></li>
-     <li><a class="active" href="media.html">Medier</a></li>
+    <ul id="navul" class="nav">
+     <li class="right"><a href="index.html">Start</a></li>
+     <li class="right"><a href="info.html">Info</a></li>
+     <li class="right"><a href="kontakt.html">Kontaktuppgifter</a></li>
+     <li class="right"><a class="active" href="media.html">Medier</a></li>
     </ul>
 
   </nav>
