--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
      </ul>
    </nav>
    <div id="page-settings">
-<h1 id="välkommenHeader">VÄLKOMMEN</h1>
+<h1 id="välkommenHeader">VÄLKOMMEN!</h1>
 <h1 id="engelska">WELCOME</h1>
 <h1 id="ryska">желанный/привет</h1>
-<p id="förstapara">det här är min anslolut första hemsida så färvänta dig inte något som ser bra ut.</p>
-<p>sidan kommer att uppdateras och byggas om under en viss tid. man kan säga att sidan är i beta läge</p> </div>
+<p id="förstapara">Det här är min anslolut första hemsida så färvänta dig inte något som ser bra ut.</p>
+<p>Sidan kommer att uppdateras och byggas om under en viss tid. Man kan säga att sidan är i beta läge</p> </div>
 
 
 
