--- a/media.html
+++ b/media.html
@@ -25,12 +25,12 @@
 <p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden.</p>
 <a id="youtube" href="https://youtube.com/alexanderwake"
   type="button" class="button">YOUTUBE</a>
-<p>denna knapp leder dig till min youtube kanal.</p>
+<p>Denna knapp leder dig till min youtube kanal.</p>
 <a id="steam" href="https://steamcommunity.com/profiles/76561198117467646"
   type="button" class="button">STEAM</a>
-<p>min steam profil</p>
+<p>Min steam profil.</p>
 <a id="twitch_button" href="https://www.twitch.tv/alexanderwaken" type="button" class="button">TWITCH</a>
-<p>min twitch kanal</p>
+<p>Min twitch kanal.</p>
 </div>
 </body>
 </html>
