text fix right?

--- a/info.html
+++ b/info.html
@@ -22,7 +22,7 @@
 
   </div>
 <h1 id="info">INFORMATION OM MIG</h1>
-<p>Mitt namn är Alexander Lusth och jag går el och energi programmet på fyrvalla med en inriktning till dator och komunikations teknik. </p>
+<p>Mitt namn är Alexander Lusth och jag går el och energi programmet på Fyrvalla med inriktningen dator och komunikations teknik. </p>
 <h1 id="praktik">PRAKTIK PLATSER</h1>
 <p>Har varit på olika arbeten/praktikplatser.</p>
 <h3>1. VVS Avdelingen i bergs kommun. 3 veckor</h3>
