added rotation right?

--- a/media.html
+++ b/media.html
@@ -32,5 +32,8 @@
 <a id="twitch_button" href="https://www.twitch.tv/alexanderwaken" type="button" class="button">TWITCH</a>
 <p>Min twitch kanal.</p>
 </div>
+<div id="rotation">
+  rotation right?
+</div>
 </body>
 </html>
