--- a/media.html
+++ b/media.html
@@ -15,6 +15,7 @@
      <li class="right"><a href="info.html">Info</a></li>
      <li class="right"><a href="kontakt.html">Kontaktuppgifter</a></li>
      <li class="right"><a class="active" href="media.html">Medier</a></li>
+     <li class="right"><a href="fun.html">LEK</a></li>
     </ul>
 
   </nav>
