added alert right?

--- a/fun.html
+++ b/fun.html
@@ -2,10 +2,10 @@
 <html lang="en" dir="ltr">
   <head>
    <link rel="stylesheet" href="Style.css">
-   <link rel="javascript" href="funscript.js">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="funscript.js" charset="utf-8"></script>
     <title>fun</title>
   </head>
   <body>
@@ -18,14 +18,6 @@
        <li class="right"><a class="active" href="fun.html">LEK</a></li>
       </ul>
     </nav>
-    <p id="p1">AUDI rs7</p>
-<p id="p2">expensive right?</p>
-
-<script>
-document.getElementById("p2").style.color = "blue";
-document.getElementById("p2").style.fontFamily = "Arial";
-document.getElementById("p2").style.fontSize = "larger";
-</script>
 
   </body>
 </html>
