added rs7 picture. changed LEK to FUN

--- a/kontakt.html
+++ b/kontakt.html
@@ -15,7 +15,7 @@
      <li class="right"><a href="info.html">Info</a></li>
      <li class="right"><a class="active" href="kontakt.html">Kontaktuppgifter</a></li>
      <li class="right"><a href="media.html">Medier</a></li>
-     <li class="right"><a href="fun.html">LEK</a></li>
+     <li class="right"><a href="fun.html">FUN</a></li>
     </ul>
 
   </nav>
