--- a/fun.html
+++ b/fun.html
@@ -15,9 +15,10 @@
        <li class="right"><a href="info.html">Info</a></li>
        <li class="right"><a href="kontakt.html">Kontaktuppgifter</a></li>
        <li class="right"><a href="media.html">Medier</a></li>
-       <li class="right"><a class="active" href="fun.html">LEK</a></li>
+       <li class="right"><a class="active" href="fun.html">FUN</a></li>
       </ul>
     </nav>
+<img id="audirs7" src="audi-rs7.jpg" alt="AUDI-RS7">
 
   </body>
 </html>
