big update.added pictures to info right?

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <h1 id="välkommenHeader">VÄLKOMMEN!</h1>
 <h1 id="engelska">WELCOME</h1>
 <h1 id="ryska">добро пожаловать</h1>
-<p id="förstapara">Det här är min anslolut första hemsida så färvänta dig inte något som ser bra ut.</p>
+<p id="förstapara">Det här är min abslolut första hemsida så färvänta dig inte något som ser bra ut.</p>
 <p>Sidan kommer att uppdateras och byggas om under en viss tid. Man kan säga att sidan är i beta läge</p> </div>
 
 
