--- a/info.html
+++ b/info.html
@@ -26,11 +26,29 @@
 <p>Mitt namn är Alexander Lusth och jag går el och energi programmet på Fyrvalla med inriktningen dator och komunikations teknik. </p>
 <h1 id="praktik">PRAKTIK PLATSER</h1>
 <p>Har varit på olika arbeten/praktikplatser.</p>
-<h3>1. VVS Avdelingen i bergs kommun. 3 veckor</h3>
-<h3>2. IT Avdelningen i bergs kommun. 3 veckor och 2 dagar.</h3>
-<h3>3. ICA i Svenstavik. 5 veckor.</h3>
-<h3>4. Crossbanan i Svebstavik. 3 veckor.</h3>
-<h3>5. EL-TEL i Östresund 6 veckor.</h3>
+
+<div id="bergs">
+  <img src="bergs-kommun.png" alt="BERGS KOMMUN">
+  <div id="bergs-text">
+    <p>VVS Avdelingen i bergs kommun. 3 veckor------
+IT Avdelningen i bergs kommun. 3 veckor och 2 dagar.-----
+Crossbanan i Svebstavik. 3 veckor.</p>
+  </div>
+</div>
+
+<div id="ica">
+  <img id="ica-bild" src="ica.png" alt="ICA">
+   <div id="ica-text">
+    <p>ICA i Svenstavik. 5 veckor.</p>
+   </div>
+</div>
+
+<div id="eltel">
+  <img id="eltel-bild" src="eltel.png" alt="ELTEL">
+   <div id="eltel-text">
+    <p>EL-TEL i Östresund 6 veckor.</p>
+  </div>
+</div>
 <h1>SPRÅK JAG LÄRT MIG</h1>
 <h3>1. SVENSKA</h3>
 <h3>2. ENGELSKA</h3>
