added second stylesheet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
  <html lang="en">
  <head>
   <link rel="stylesheet" href="Style.css">
+  <link rel="stylesheet2" href="Style2.css">
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -23,7 +24,7 @@
 <h1 id="engelska">WELCOME</h1>
 <h1 id="ryska">добро пожаловать</h1>
 <p id="förstapara">Det här är min abslolut första hemsida så färvänta dig inte något som ser bra ut.</p>
-<p>Sidan kommer att uppdateras och byggas om under en viss tid. Man kan säga att sidan är i beta läge</p> </div>
+<p>Sidan kommer att uppdateras och byggas om.</p> </div>
 
 
 
