added pictures. version 1.1

--- a/fun.html
+++ b/fun.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
    <link rel="stylesheet" href="Style.css">
-   <link rel="stylesheet2" href="Style2.css">
+   <link rel="stylesheet" href="Style2.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -20,7 +20,10 @@
       </ul>
     </nav>
 <img id="audirs7" src="audi-rs7.jpg" alt="AUDI-RS7">
-<h1 id="audi-h">AUDIRS7</h1>
+<h1 id="audi-h">AUDI RS7</h1>
+<div id="audi-info">
+  V8 and carbon fiber.
+</div>
 
   </body>
 </html>
