--- a/media.html
+++ b/media.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <link rel="stylesheet" href="Style.css">
- <link rel="stylesheet2" href="Style2.css">
+ <link rel="stylesheet" href="Style2.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -38,7 +38,7 @@
   rotation right?
 </div>
 <div id="site-version">
-  site-version:1.0
+  site-version:1.1
 </div>
 </body>
 </html>
