--- a/info.html
+++ b/info.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
  <link rel="stylesheet" href="Style.css">
- <link rel="stylesheet2" href="Style2.css">
+ <link rel="stylesheet" href="Style2.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
