added elan and summit v1.2

--- a/fun.html
+++ b/fun.html
@@ -22,8 +22,13 @@
 <img id="audirs7" src="audi-rs7.jpg" alt="AUDI-RS7">
 <h1 id="audi-h">AUDI RS7</h1>
 <div id="audi-info">
-  V8 and carbon fiber.
+  V8 and carbon fiber. 560HP
 </div>
-
+<img id="elan" src="elan.jpg" alt="">
+<h1 id="elan-h">SKIDOO ELAN</h1>
+<div id="elan-info">ROTAX250 12HP</div>
+<img id="summit" src="summit.jpg" alt="">
+<h1 id="summit-h">SKIIDOO SUMMIT</h1>
+<div id="summit-info">ROTAX550 56HP</div>
   </body>
 </html>
