--- a/media.html
+++ b/media.html
@@ -38,7 +38,8 @@
   rotation right?
 </div>
 <div id="site-version">
-  site-version:1.2
+  site-version:1.3
 </div>
+<iframe id="latest-vid" width="560" height="315" src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </body>
 </html>
