--- a/media.html
+++ b/media.html
@@ -25,21 +25,20 @@
 </div>
 <h1 id="rolig">ROLIGARE DELEN</h1>
 <p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden.</p>
-<a id="youtube" href="https://youtube.com/alexanderwake"
-  type="button" class="button">YOUTUBE</a>
-<p>Denna knapp leder dig till min youtube kanal.</p>
-<a id="steam" href="https://steamcommunity.com/profiles/76561198117467646"
-  type="button" class="button">STEAM</a>
+<a href="https://youtube.com/alexanderwake"
+  type="button" class="button"><img id="youtube" src="youtube.png" alt=""> </a>
+<p>Min youtube kanal.</p>
+<a href="https://steamcommunity.com/profiles/76561198117467646"
+  type="button" class="button"> <img id="steam" src="steam.jpg" alt=""> </a>
 <p>Min steam profil.</p>
-<a id="twitch_button" href="https://www.twitch.tv/alexanderwaken" type="button" class="button">TWITCH</a>
+<a href="https://www.twitch.tv/alexanderwaken" type="button" class="button"><img id="twitch-button" src="twitch.jpg" alt=""> </a>
 <p>Min twitch kanal.</p>
 </div>
 <div id="rotation">
   rotation right?
-</div>
-<div id="site-version">
-  site-version:1.3
-</div>
-<iframe id="latest-vid" width="560" height="315" src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+  </div>
+<div id="site-version">site-version:1.4</div>
+<div id="latest-vid">
+<iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 </body>
 </html>
