--- a/index.html
+++ b/index.html
@@ -20,11 +20,22 @@
      </ul>
    </nav>
    <div id="page-settings">
-<h1 id="välkommenHeader">VÄLKOMMEN!</h1>
-<h1 id="engelska">WELCOME</h1>
-<h1 id="ryska">добро пожаловать</h1>
-<p id="förstapara">Det här är min abslolut första hemsida så färvänta dig inte något som ser bra ut.</p>
-<p>Sidan kommer att uppdateras och byggas om.</p> </div>
+     <div id="välkommenHeader">
+       <h1>VÄLKOMMEN!</h1>
+     </div>
+     <div id="engelska">
+       <h1>WELCOME</h1>
+     </div>
+     <div id="ryska">
+       <h1>добро пожаловать</h1>
+     </div>
+     <div id="förstapara">
+       <p>Det här är min första hemsida..... deal with it right?</p>
+     </div>
+ <div id="site-info">
+   sidan byggs om och kommer se anourlunda ut senare
+ </div>
+</div>
 <img id="helags" src="helags.JPG" alt="">
 
 
