added flags and optimitaion v1.4

--- a/info.html
+++ b/info.html
@@ -51,9 +51,24 @@ Crossbanan i Svebstavik. 3 veckor.</p>
   </div>
 </div>
 <h1>SPRÅK JAG LÄRT MIG</h1>
-<h3>1. SVENSKA</h3>
-<h3>2. ENGELSKA</h3>
-<h3>3. TYSKA (lite)</h3>
+<div id="svenska">
+  <img id="svenska-flag" src="svenska.png" alt="SVENSKA">
+  <div id="svenska-text">
+    <p>svenska</p>
+  </div>
+</div>
+<div id="engelska-lang">
+  <img id="engelska-bild" src="engelska.jpg" alt="ENGELSKA">
+  <div id="engelska-text">
+    <p>engelska</p>
+  </div>
+</div>
+<div id="tyska">
+  <img id="tyska-bild" src="tyska.png" alt="TYSKA-LITE">
+<div id="tyska-text">
+  <p>tyska(lite)</p>
+</div>
+</div>
 </div>
 
 
