cleaned browser. added a script v1.4(soon1.5)

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
  <!DOCTYPE html>
  <html lang="en">
  <head>
-  <link rel="stylesheet" href="Style.css">
-  <link rel="stylesheet" href="Style2.css">
+  <link rel="stylesheet" href="css/Style.css">
+  <link rel="stylesheet" href="css/Style2.css">
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -36,7 +36,7 @@
    sidan byggs om och kommer se anourlunda ut senare
  </div>
 </div>
-<img id="helags" src="helags.JPG" alt="">
+<img id="helags" src="pictures/helags.JPG" alt="">
 
 
 
