--- a/info.html
+++ b/info.html
@@ -1,8 +1,8 @@
      <!DOCTYPE html>
 <html lang="en">
 <head>
- <link rel="stylesheet" href="Style.css">
- <link rel="stylesheet" href="Style2.css">
+ <link rel="stylesheet" href="css/Style.css">
+ <link rel="stylesheet" href="css/Style2.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -29,7 +29,7 @@
 <p>Har varit på olika arbeten/praktikplatser.</p>
 
 <div id="bergs">
-  <img src="bergs-kommun.png" alt="BERGS KOMMUN">
+  <img src="pictures/bergs-kommun.png" alt="BERGS KOMMUN">
   <div id="bergs-text">
     <p>VVS Avdelingen i bergs kommun. 3 veckor------
 IT Avdelningen i bergs kommun. 3 veckor och 2 dagar.-----
@@ -38,33 +38,33 @@ Crossbanan i Svebstavik. 3 veckor.</p>
 </div>
 
 <div id="ica">
-  <img id="ica-bild" src="ica.png" alt="ICA">
+  <img id="ica-bild" src="pictures/ica.png" alt="ICA">
    <div id="ica-text">
     <p>ICA i Svenstavik. 5 veckor.</p>
    </div>
 </div>
 
 <div id="eltel">
-  <img id="eltel-bild" src="eltel.png" alt="ELTEL">
+  <img id="eltel-bild" src="pictures/eltel.png" alt="ELTEL">
    <div id="eltel-text">
     <p>EL-TEL i Östresund 6 veckor.</p>
   </div>
 </div>
 <h1>SPRÅK JAG LÄRT MIG</h1>
 <div id="svenska">
-  <img id="svenska-flag" src="svenska.png" alt="SVENSKA">
+  <img id="svenska-flag" src="pictures/svenska.png" alt="SVENSKA">
   <div id="svenska-text">
     <p>svenska</p>
   </div>
 </div>
 <div id="engelska-lang">
-  <img id="engelska-bild" src="engelska.jpg" alt="ENGELSKA">
+  <img id="engelska-bild" src="pictures/engelska.jpg" alt="ENGELSKA">
   <div id="engelska-text">
     <p>engelska</p>
   </div>
 </div>
 <div id="tyska">
-  <img id="tyska-bild" src="tyska.png" alt="TYSKA-LITE">
+  <img id="tyska-bild" src="pictures/tyska.png" alt="TYSKA-LITE">
 <div id="tyska-text">
   <p>tyska(lite)</p>
 </div>
