--- a/kontakt.html
+++ b/kontakt.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
- <link rel="stylesheet" href="Style.css">
- <link rel="stylesheet" href="Style2.css">
+ <link rel="stylesheet" href="css/Style.css">
+ <link rel="stylesheet" href="css/Style2.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -27,6 +27,6 @@
 <p>Mail address. alexander0906@live.se</p>
 <p>Kontaktuppgifter senast uppdaterad 2018-11-28</p>
 </div>
-<img id="snow" src="snow.jpg" alt="">
+<img id="snow" src="pictures/snow.jpg" alt="">
 </body>
 </html>
