really small fix v1.4

--- a/info.html
+++ b/info.html
@@ -47,7 +47,7 @@ Crossbanan i Svebstavik. 3 veckor.</p>
 <div id="eltel">
   <img id="eltel-bild" src="pictures/eltel.png" alt="ELTEL">
    <div id="eltel-text">
-    <p>EL-TEL i Östresund 6 veckor.</p>
+    <p>EL-TEL i Östersund 6 veckor.</p>
   </div>
 </div>
 <h1>SPRÅK JAG LÄRT MIG</h1>
