added start script v1.5

--- a/fun.html
+++ b/fun.html
@@ -6,7 +6,6 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="javaScripts/funscript.js" charset="utf-8"></script>
     <title>fun</title>
   </head>
   <body>
@@ -30,5 +29,8 @@
 <img id="summit" src="pictures/summit.jpg" alt="">
 <h1 id="summit-h">SKIIDOO SUMMIT</h1>
 <div id="summit-info">ROTAX550 56HP</div>
+<button id="start-btn" onclick="getStart()">Back to Start</button>
+<script src="javaScripts/funscript.js" charset="utf-8"></script>
+<script src="javaScripts/startscript.js" charset="utf-8"></script>
   </body>
 </html>
