--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
  </div>
 </div>
 <img id="helags" src="pictures/helags.JPG" alt="">
-
-
-
-
+<script src="javaScripts/startscript.js" charset="utf-8"></script>
  </body>
  </html>
