--- a/info.html
+++ b/info.html
@@ -70,10 +70,7 @@ Crossbanan i Svebstavik. 3 veckor.</p>
 </div>
 </div>
 </div>
-
-
-
-
-
+<button id="start-btn" onclick="getStart()">Back to Start</button>
+<script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
 </html>
