--- a/kontakt.html
+++ b/kontakt.html
@@ -28,5 +28,7 @@
 <p>Kontaktuppgifter senast uppdaterad 2018-11-28</p>
 </div>
 <img id="snow" src="pictures/snow.jpg" alt="">
+<button id="start-btn" onclick="getStart()">Back to Start</button>
+<script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
 </html>
