--- a/media.html
+++ b/media.html
@@ -37,11 +37,13 @@
 <div id="rotation">
   rotation right?
   </div>
-<div id="site-version">site-version:1.4.8</div>
+<div id="site-version">site-version:1.5</div>
 <div id="latest-vid">
 <iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
 <button id="date-btn" onclick="getDate()">DATUM</button>
 <p id="datumet"></p>
+<button id="start-btn" onclick="getStart()">Back to Start</button>
 <script src="javaScripts/datetime.js"></script>
+<script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
 </html>
