--- a/media.html
+++ b/media.html
@@ -43,6 +43,7 @@
 <button id="date-btn" onclick="getDate()">DATUM</button>
 <p id="datumet"></p>
 <button id="start-btn" onclick="getStart()">Back to Start</button>
+<img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
 <script src="javaScripts/datetime.js"></script>
 <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
