added cv plus ui for cv(v2.0)

--- a/info.html
+++ b/info.html
@@ -3,6 +3,9 @@
 <head>
  <link rel="stylesheet" href="css/Style.css">
  <link rel="stylesheet" href="css/Style2.css">
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+ <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -20,56 +23,84 @@
     </ul>
 
   </nav>
-  <div id="page-settings">
 
+  <div id="row">
+    <div id="left-column-info">
+      <div id="card-info">
+        <img id="img-info" src="pictures/avatar.jpg" style="width:100%" alt="Avatar">
+        <h2>ALEXANDER LUSTH</h2>
+        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Student</p>
+        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Jämtland, Sweden</p>
+        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>alexander0906@live.se</p>
+        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>0761423664</p>
+        <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
+<p>Computer Fixing/Service</p>
+<div class="w3-light-grey w3-round-xlarge w3-small">
+  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
+</div>
+<p>Editing</p>
+<div class="w3-light-grey w3-round-xlarge w3-small">
+  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
+    <div class="w3-center w3-text-white">80%</div>
   </div>
-<h1 id="info">INFORMATION OM MIG</h1>
-<p>Mitt namn är Alexander Lusth och jag går el och energi programmet på Fyrvalla med inriktningen dator och komunikations teknik. </p>
-<h1 id="praktik">PRAKTIK PLATSER</h1>
-<p>Har varit på olika arbeten/praktikplatser.</p>
+</div>
+<p>HTML</p>
+<div class="w3-light-grey w3-round-xlarge w3-small">
+  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:35%">35%</div>
+</div>
+<p>Coding</p>
+<div class="w3-light-grey w3-round-xlarge w3-small">
+  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:25%">25%</div>
+</div>
 
-<div id="bergs">
-  <img src="pictures/bergs-kommun.png" alt="BERGS KOMMUN">
-  <div id="bergs-text">
-    <p>VVS Avdelingen i bergs kommun. 3 veckor------
-IT Avdelningen i bergs kommun. 3 veckor och 2 dagar.-----
-Crossbanan i Svebstavik. 3 veckor.</p>
-  </div>
+      <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+<p>Swedish</p>
+<div class="w3-light-grey w3-round-xlarge">
+  <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
 </div>
+<hr>
+<p>English</p>
+<div class="w3-light-grey w3-round-xlarge">
+  <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
+</div>
+<hr>
+<p>German</p>
+<div class="w3-light-grey w3-round-xlarge">
+  <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
+</div>
+    </div>
+  </div>
 
-<div id="ica">
-  <img id="ica-bild" src="pictures/ica.png" alt="ICA">
-   <div id="ica-text">
-    <p>ICA i Svenstavik. 5 veckor.</p>
-   </div>
-</div>
-
-<div id="eltel">
-  <img id="eltel-bild" src="pictures/eltel.png" alt="ELTEL">
-   <div id="eltel-text">
-    <p>EL-TEL i Östersund 6 veckor.</p>
+    <div id="right-column-info">
+      <div id="card-info">
+          <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
+          <hr>
+          <h5 class="w3-opacity"><b>Bergs kommun</b></h5>
+            <p>IT-Avdelningen i 5 veckor.   VVS-Avdelningen i 3 veckor.   Crossbanan i 3 veckor. </p>
+            <hr>
+            <h5 class="w3-opacity"><b>ICA</b></h5>
+          <p>ICA butiken i Svenstavik i 5 veckor.</p>
+          <hr>
+          <h5 class="w3-opacity"><b>EL-TEL</b></h5>
+      <p>EL-TEL i Östersund i 5 veckor.</p><br>
+      <hr>
+      <h5 class="w3-opacity"><b>THOREB</b></h5>
+      <p>Thoreb på frösön i 2 veckor.</p>
+    </div>
+      <div id="card-info">
+        <div class="w3-container w3-card w3-white">
+  <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+  <hr>
+  <div class="w3-container">
+    <h5 class="w3-opacity"><b>Fyrvalla EEDAT</b></h5>
+    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2019</h6>
+    <p>El och energi programet på Fyrvallagymnasiet med inriktning till dator och komunikationsteknik</p>
+    <hr>
   </div>
 </div>
-<h1>SPRÅK JAG LÄRT MIG</h1>
-<div id="svenska">
-  <img id="svenska-flag" src="pictures/svenska.png" alt="SVENSKA">
-  <div id="svenska-text">
-    <p>svenska</p>
+      </div>
+    </div>
   </div>
-</div>
-<div id="engelska-lang">
-  <img id="engelska-bild" src="pictures/engelska.jpg" alt="ENGELSKA">
-  <div id="engelska-text">
-    <p>engelska</p>
-  </div>
-</div>
-<div id="tyska">
-  <img id="tyska-bild" src="pictures/tyska.png" alt="TYSKA-LITE">
-<div id="tyska-text">
-  <p>tyska(lite)</p>
-</div>
-</div>
-</div>
 <button id="start-btn" onclick="getStart()">Back to Start</button>
 <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
