--- a/info.html
+++ b/info.html
@@ -3,9 +3,6 @@
 <head>
  <link rel="stylesheet" href="css/Style.css">
  <link rel="stylesheet" href="css/Style2.css">
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
- <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -21,86 +18,88 @@
      <li class="right"><a href="media.html">Medier</a></li>
      <li class="right"><a href="fun.html">FUN</a></li>
     </ul>
-
   </nav>
-
   <div id="row">
-    <div id="left-column-info">
-      <div id="card-info">
-        <img id="img-info" src="pictures/avatar.jpg" style="width:100%" alt="Avatar">
-        <h2>ALEXANDER LUSTH</h2>
-        <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Student</p>
-        <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Jämtland, Sweden</p>
-        <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>alexander0906@live.se</p>
-        <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>0761423664</p>
-        <p class="w3-large"><b><i class="fa fa-asterisk fa-fw w3-margin-right w3-text-teal"></i>Skills</b></p>
-<p>Computer Fixing/Service</p>
-<div class="w3-light-grey w3-round-xlarge w3-small">
-  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:90%">90%</div>
-</div>
-<p>Editing</p>
-<div class="w3-light-grey w3-round-xlarge w3-small">
-  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:80%">
-    <div class="w3-center w3-text-white">80%</div>
-  </div>
-</div>
-<p>HTML</p>
-<div class="w3-light-grey w3-round-xlarge w3-small">
-  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:35%">35%</div>
-</div>
-<p>Coding</p>
-<div class="w3-light-grey w3-round-xlarge w3-small">
-  <div class="w3-container w3-center w3-round-xlarge w3-teal" style="width:25%">25%</div>
-</div>
-
-      <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
-<p>Swedish</p>
-<div class="w3-light-grey w3-round-xlarge">
-  <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
-</div>
-<hr>
-<p>English</p>
-<div class="w3-light-grey w3-round-xlarge">
-  <div class="w3-round-xlarge w3-teal" style="height:24px;width:55%"></div>
-</div>
-<hr>
-<p>German</p>
-<div class="w3-light-grey w3-round-xlarge">
-  <div class="w3-round-xlarge w3-teal" style="height:24px;width:25%"></div>
-</div>
-    </div>
-  </div>
-
-    <div id="right-column-info">
-      <div id="card-info">
-          <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-suitcase fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Work Experience</h2>
-          <hr>
-          <h5 class="w3-opacity"><b>Bergs kommun</b></h5>
-            <p>IT-Avdelningen i 5 veckor.   VVS-Avdelningen i 3 veckor.   Crossbanan i 3 veckor. </p>
-            <hr>
-            <h5 class="w3-opacity"><b>ICA</b></h5>
-          <p>ICA butiken i Svenstavik i 5 veckor.</p>
-          <hr>
-          <h5 class="w3-opacity"><b>EL-TEL</b></h5>
-      <p>EL-TEL i Östersund i 5 veckor.</p><br>
-      <hr>
-      <h5 class="w3-opacity"><b>THOREB</b></h5>
-      <p>Thoreb på frösön i 2 veckor.</p>
-    </div>
-      <div id="card-info">
-        <div class="w3-container w3-card w3-white">
-  <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+  <div id="left-column-info">
+    <div id="card-info">
+      <img id="avatar-img" style="width:100%" src="pictures/avatar.jpg" alt="">
+  <h2>ALEXANDER LUSTH</h2>
+  <p><img src="pictures/work.png" alt="work:" class="img-info" >   Student</p>
+  <p><img src="pictures/house.png" alt="lives:" class="img-info">   Jämtland, Sweden</p>
+  <p> <img src="pictures/mail.png" alt="mail:" class="img-info">   alexander0906@live.se</p>
+  <p> <img src="pictures/phone.png" alt="phone:" class="img-info">   0761423664</p>
   <hr>
-  <div class="w3-container">
-    <h5 class="w3-opacity"><b>Fyrvalla EEDAT</b></h5>
-    <h6 class="w3-text-teal"><i class="fa fa-calendar fa-fw w3-margin-right"></i>2016 - 2019</h6>
-    <p>El och energi programet på Fyrvallagymnasiet med inriktning till dator och komunikationsteknik</p>
-    <hr>
-  </div>
-</div>
-      </div>
-    </div>
-  </div>
+  <h3><img src="pictures/flake.png" alt="-.-" class="img-info">   SKILLS</h3>
+                      <p class="info-text">Computer Fixing/Service</p>
+                      <div class="barBackground">
+                          <div class="barForeground" id="bar-pc">
+                              <p class="barPercentage">90%</p>
+                          </div>
+                      </div>
+                      <p class="info-text">Editing</p>
+                      <div class="barBackground">
+                              <div class="barForeground" id="bar-edit">
+                                  <p class="barPercentage">80%</p>
+                              </div>
+                          </div>
+                      <p class="info-text">HTML</p>
+                      <div class="barBackground">
+                              <div class="barForeground" id="bar-html">
+                                  <p class="barPercentage">35%</p>
+                                </div>
+                              </div>
+                              <p class="info-text">Coding</p>
+                                  <div class="barBackground">
+                                    <div class="barForeground" id="bar-code">
+                                      <p class="barPercentage">25%</p>
+                                    </div>
+                                  </div>
+                                  <hr>
+                                <h4><img src="pictures/globe.png" alt=""class="img-info">   Languages</h4>
+                                <p class="info-text">Svenska</p>
+                                <div class="barBackground">
+                                  <div class="barForeground" id="lang-bar-swe">
+                                  </div>
+                                </div>
+                                <p class="info-text">Engelska</p>
+                                <div class="barBackground">
+                                  <div class="barForeground" id="lang-bar-eng">
+                                  </div>
+                                </div>
+                                <p class="info-text">Tyska</p>
+                                <div class="barBackground">
+                                  <div class="barForeground" id="lang-bar-de">
+                                  </div>
+                                </div>
+                              </div>
+                          </div>
+                          <div id="right-column-info">
+                            <div id="card-info">
+                                <h2><img src="pictures/work.png" alt=""class="img-info">   Arbeten/Praktik</h2>
+
+                            <hr>
+                            <h4 class="info-text">Bergs Kommun</h4>
+                            <p class="info-text">IT-Avdelningen i 5 veckor. VVS-Avdelningen i 3 veckor. Crossbanan i 3 veckor.</p>
+                            <hr>
+                            <h4 class="info-text">ICA</h4>
+                            <p class="info-text">ICA butiken i Svenstavik i 5 veckor.</p>
+                            <hr>
+                            <h4 class="info-text">EL-TEL</h4>
+                            <p class="info-text">EL-TEL i Östersund i 5 veckor.</p>
+                            <hr>
+                            <h4 class="info-text">THOREB</h4>
+                            <p class="info-text">Thoreb på frösön i 2 veckor.</p>
+                            <hr>
+                            <h2><img src="pictures/book.png" alt="" class="img-info">   Utbildning</h2>
+                            <hr>
+                            <h4 class="info-text">Fyrvalla EEDAT</h4>
+                            <h5><img src="pictures/calendar.png" alt="" class="img-info">   2016 - 2019</h5>
+                            <p class="info-text">El och energi programet på Fyrvallagymnasiet med inriktning till dator och komunikationsteknik</p>
+                          </div>
+                          </div>
+                  </div>
+
+
 <button id="start-btn" onclick="getStart()">Back to Start</button>
 <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
