added animation. bug fixes v2.0

--- a/fun.html
+++ b/fun.html
@@ -27,7 +27,7 @@
 <h1 id="elan-h">SKIDOO ELAN</h1>
 <div id="elan-info">ROTAX250 12HP</div>
 <img id="summit" src="pictures/summit.jpg" alt="">
-<h1 id="summit-h">SKIIDOO SUMMIT</h1>
+<h1 id="summit-h">SKIDOO SUMMIT</h1>
 <div id="summit-info">ROTAX550 56HP</div>
 <button id="start-btn" onclick="getStart()">Back to Start</button>
 <script src="javaScripts/funscript.js" charset="utf-8"></script>
