--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
   <link rel="stylesheet" href="css/Style.css">
   <link rel="stylesheet" href="css/Style2.css">
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <title>Document</title>
- </head>
- <body>
-   <nav id="navmain" class="pagerow">
-     <ul id="navul" class="nav">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+</head>
+
+<body>
+  <nav id="navmain" class="pagerow">
+    <ul id="navul" class="nav">
       <li class="right"><a class="active" href="index.html">Start</a></li>
       <li class="right"><a href="info.html">Info</a></li>
       <li class="right"><a href="kontakt.html">Kontaktuppgifter</a></li>
       <li class="right"><a href="media.html">Medier</a></li>
       <li class="right"><a href="fun.html">FUN</a></li>
-     </ul>
-   </nav>
-   <div id="page-settings">
-     <div id="välkommenHeader">
-       <h1>VÄLKOMMEN!</h1>
-     </div>
-     <div id="engelska">
-       <h1>WELCOME</h1>
-     </div>
-     <div id="ryska">
-       <h1>добро пожаловать</h1>
-     </div>
-     <div id="förstapara">
-       <p>Det här är min första hemsida..... deal with it right?</p>
-     </div>
- <div id="site-info">
-   sidan byggs om och kommer se anourlunda ut senare
- </div>
-</div>
-<img id="helags" src="pictures/helags.JPG" alt="">
-<script src="javaScripts/startscript.js" charset="utf-8"></script>
- </body>
- </html>
+    </ul>
+  </nav>
+  <div id="page-settings">
+    <div class="animation" id="animation-settings">
+    <div id="välkommenHeader">
+      <h1>VÄLKOMMEN!</h1>
+    </div>
+    <div id="engelska">
+      <h1>WELCOME</h1>
+    </div>
+    <div id="ryska">
+      <h1>добро пожаловать</h1>
+    </div>
+  </div>
+    <div id="förstapara">
+      <p>Det här är min första hemsida..... deal with it right?</p>
+    </div>
+    <div id="site-info">
+      sidan byggs om och kommer se anourlunda ut senare
+    </div>
+  </div>
+  <img id="helags" src="pictures/helags.JPG" alt="">
+  <script src="javaScripts/startscript.js" charset="utf-8"></script>
+</body>
+
+</html>
