--- a/index.html
+++ b/index.html
@@ -15,28 +15,28 @@
     <ul id="navul" class="nav">
       <li class="right"><a class="active" href="index.html">Start</a></li>
       <li class="right"><a href="info.html">Info</a></li>
-      <li class="right"><a href="kontakt.html">Kontaktuppgifter</a></li>
       <li class="right"><a href="media.html">Medier</a></li>
       <li class="right"><a href="fun.html">FUN</a></li>
     </ul>
   </nav>
   <div id="page-settings">
-    <div class="animation" id="animation-settings">
-    <div id="välkommenHeader">
-      <h1>VÄLKOMMEN!</h1>
+    <div class="animation-index" id="animation-settings">
+      <div id="välkommenHeader">
+        <h1>VÄLKOMMEN!</h1>
+      </div>
+      <div id="engelska">
+        <h1>WELCOME</h1>
+      </div>
+      <div id="ryska">
+        <h1>добро пожаловать</h1>
+      </div>
     </div>
-    <div id="engelska">
-      <h1>WELCOME</h1>
-    </div>
-    <div id="ryska">
-      <h1>добро пожаловать</h1>
-    </div>
-  </div>
-    <div id="förstapara">
-      <p>Det här är min första hemsida..... deal with it right?</p>
-    </div>
-    <div id="site-info">
-      sidan byggs om och kommer se anourlunda ut senare
+    <div id="row">
+      <div id="left-column-info">
+        <div id="card-info">
+          <p class="info-text">det här är min första hemsida..... den kommer ändras</p>
+        </div>
+      </div>
     </div>
   </div>
   <img id="helags" src="pictures/helags.JPG" alt="">
