aded 2.0 ui to FUN v2.0

--- a/fun.html
+++ b/fun.html
@@ -20,19 +20,50 @@
     </ul>
   </nav>
   <img id="audirs7" src="pictures/audi-rs7.jpg" alt="AUDI-RS7">
-  <h1 id="audi-h">AUDI RS7</h1>
-  <div id="audi-info">
-    V8 and carbon fiber. 560HP
+  <div id="row">
+    <div id="left-column-info">
+      <div id="card-info">
+        <h1 id="audi-h">AUDI RS7</h1>
+        <p><img src="pictures/engine.png" alt="engine:" class="img-info"> V8</p>
+        <div class="barBackground">
+          <div class="barForeground" id="bar-audi">
+            <p><img src="pictures/power.png" alt="HP" class="img-info"> 560HP</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
   <img id="elan" src="pictures/elan.jpg" alt="">
-  <h1 id="elan-h">SKIDOO ELAN</h1>
-  <div id="elan-info">ROTAX250 12HP</div>
-  <img id="summit" src="pictures/summit.jpg" alt="">
-  <h1 id="summit-h">SKIDOO SUMMIT</h1>
-  <div id="summit-info">ROTAX550 56HP</div>
-  <button id="start-btn" onclick="getStart()">Back to Start</button>
-  <script src="javaScripts/funscript.js" charset="utf-8"></script>
-  <script src="javaScripts/startscript.js" charset="utf-8"></script>
+  <div id="row">
+    <div id="left-column-info">
+      <div id="card-info">
+        <h1 id="elan-h">SKIDOO ELAN</h1>
+        <p><img src="pictures/engine.png" alt="engine:" class="img-info"> ROTAX250</p>
+        <div class="barBackground">
+          <div class="barForeground" id="bar-250">
+            <p><img src="pictures/power.png" alt="HP" class="img-info"> 12HP</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+        <img id="summit" src="pictures/summit.jpg" alt="">
+        <div id="row">
+          <div id="left-column-info">
+            <div id="card-info">
+              <h1 id="elan-h">SKIDOO SUMMIT</h1>
+              <p><img src="pictures/engine.png" alt="engine:" class="img-info"> ROTAX550</p>
+              <div class="barBackground">
+                <div class="barForeground" id="bar-550">
+                  <p><img src="pictures/power.png" alt="HP" class="img-info"> 56HP</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <button id="start-btn" onclick="getStart()">Back to Start</button>
+        <script src="javaScripts/funscript.js" charset="utf-8"></script>
+        <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
 
 </html>
