--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     </div>
   </div>
   <img id="helags" src="pictures/helags.JPG" alt="">
+  <footer>
+    
+  </footer>
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
 
