--- a/info.html
+++ b/info.html
@@ -99,9 +99,10 @@
       </div>
     </div>
   </div>
-
-
   <button id="start-btn" onclick="getStart()">Back to Start</button>
+  <footer id="footer">
+    <p id="footer-text" >Layout made by Alexander Lusth</p>
+  </footer>
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
 
