--- a/fun.html
+++ b/fun.html
@@ -65,5 +65,7 @@
         <script src="javaScripts/funscript.js" charset="utf-8"></script>
         <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
-
+<footer id="footer">
+  <p id="footer-text">Layout made by Alexander Lusth</p>
+</footer>
 </html>
