--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </div>
   </div>
   <img id="helags" src="pictures/helags.JPG" alt="">
-  <footer>
-    
+  <footer id="footer">
+    <p id="footer-text" >Layout made by Alexander Lusth</p>
   </footer>
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
