--- a/media.html
+++ b/media.html
@@ -1,49 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
- <link rel="stylesheet" href="css/Style.css">
- <link rel="stylesheet" href="css/Style2.css">
+  <link rel="stylesheet" href="css/Style.css">
+  <link rel="stylesheet" href="css/Style2.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Media</title>
 
 </head>
+
 <body>
   <nav id="navmain">
     <ul id="navul" class="nav">
-     <li class="right"><a href="index.html">Start</a></li>
-     <li class="right"><a href="info.html">Info</a></li>
-     <li class="right"><a class="active" href="media.html">Medier</a></li>
-     <li class="right"><a href="fun.html">FUN</a></li>
+      <li class="right"><a href="index.html">Start</a></li>
+      <li class="right"><a href="info.html">Info</a></li>
+      <li class="right"><a class="active" href="media.html">Medier</a></li>
+      <li class="right"><a href="fun.html">FUN</a></li>
     </ul>
 
   </nav>
-<div id="page-settings">
+  <div id="page-settings">
 
-</div>
-<h1 id="rolig">ROLIGARE DELEN</h1>
-<p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden.</p>
-<a href="https://youtube.com/alexanderwake"
-  type="button" class="button"><img id="youtube" src="pictures/youtube.png" alt=""> </a>
-<p>Min youtube kanal.</p>
-<a href="https://steamcommunity.com/profiles/76561198117467646"
-  type="button" class="button"> <img id="steam" src="pictures/steam.jpg" alt=""> </a>
-<p>Min steam profil.</p>
-<a href="https://www.twitch.tv/alexanderwaken" type="button" class="button"><img id="twitch-button" src="pictures/twitch.jpg" alt=""> </a>
-<p>Min twitch kanal.</p>
-</div>
-<div id="rotation">
-  rotation right?
   </div>
-<div id="site-version">site-version:2.0</div>
-<div id="latest-vid">
-<iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
-<button id="date-btn" onclick="getDate()">DATUM</button>
-<p id="datumet"></p>
-<button id="start-btn" onclick="getStart()">Back to Start</button>
-<img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
-<script src="javaScripts/datetime.js"></script>
-<script src="javaScripts/startscript.js" charset="utf-8"></script>
+  <h1 id="rolig">ROLIGARE DELEN</h1>
+  <p id="link">här i så finns det mästadels länkar till olika projekt eller websidor som jag håller på med på fritiden.</p>
+  <a href="https://youtube.com/alexanderwake" type="button" class="button"><img id="youtube" src="pictures/youtube.png" alt=""> </a>
+  <p>Min youtube kanal.</p>
+  <a href="https://steamcommunity.com/profiles/76561198117467646" type="button" class="button"> <img id="steam" src="pictures/steam.jpg" alt=""> </a>
+  <p>Min steam profil.</p>
+  <a href="https://www.twitch.tv/alexanderwaken" type="button" class="button"><img id="twitch-button" src="pictures/twitch.jpg" alt=""> </a>
+  <p>Min twitch kanal.</p>
+  </div>
+  <div id="rotation">
+    rotation right?
+  </div>
+  <div id="site-version">site-version:2.0</div>
+  <div id="latest-vid">
+    <iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+  <button id="date-btn" onclick="getDate()">DATUM</button>
+  <p id="datumet"></p>
+  <button id="start-btn" onclick="getStart()">Back to Start</button>
+  <img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
+  <footer id="footer">
+    <p id="footer-text" >Layout made by Alexander Lusth</p>
+  </footer>
+  <script src="javaScripts/datetime.js"></script>
+  <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
+
 </html>
