fixes with footer

--- a/fun.html
+++ b/fun.html
@@ -61,11 +61,19 @@
             </div>
           </div>
         </div>
-        <button id="start-btn" onclick="getStart()">Back to Start</button>
-        <script src="javaScripts/funscript.js" charset="utf-8"></script>
-        <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
 <footer id="footer">
-  <p id="footer-text">Layout made by Alexander Lusth</p>
+  <div class="row">
+    <div class="column1-3">
+      <button id="start-btn" onclick="getStart()">Back to Start</button>
+    </div>
+    <div class="column1-3" id="footer-div">
+      <p id="footer-text">Layout made by Alexander Lusth</p>
+    </div>
+    <div class="column1-3">
+    </div>
+  </div>
 </footer>
+<script src="javaScripts/funscript.js" charset="utf-8"></script>
+<script src="javaScripts/startscript.js" charset="utf-8"></script>
 </html>
