--- a/media.html
+++ b/media.html
@@ -41,10 +41,18 @@
     <iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
   <button id="date-btn" onclick="getDate()">DATUM</button>
   <p id="datumet"></p>
-  <button id="start-btn" onclick="getStart()">Back to Start</button>
   <img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
   <footer id="footer">
-    <p id="footer-text" >Layout made by Alexander Lusth</p>
+    <div class="row">
+      <div class="column1-3">
+        <button id="start-btn" onclick="getStart()">Back to Start</button>
+      </div>
+      <div class="column1-3" id="footer-div">
+        <p id="footer-text">Layout made by Alexander Lusth</p>
+      </div>
+      <div class="column1-3">
+      </div>
+    </div>
   </footer>
   <script src="javaScripts/datetime.js"></script>
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
