moved out bootstrap

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <nav id="navmain" class="pagerow">
+  <nav class="form-inline" id="navmain" class="pagerow">
     <ul id="navul" class="nav">
       <li class="right"><a class="active" href="index.html">Start</a></li>
       <li class="right"><a href="info.html">Info</a></li>
