--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <nav id="navmain">
+  <nav class="form-inline" id="navmain">
     <ul id="navul" class="nav">
       <li class="right"><a href="index.html">Start</a></li>
       <li class="right"><a class="active" href="info.html">Info</a></li>
