--- a/fun.html
+++ b/fun.html
@@ -16,7 +16,7 @@
       <li class="right"><a href="index.html">Start</a></li>
       <li class="right"><a href="info.html">Info</a></li>
       <li class="right"><a href="media.html">Medier</a></li>
-      <li class="right"><a class="active" href="fun.html">FUN</a></li>
+      <li class="right"><a class="active" href="fun.html">BYNKER</a></li>
     </ul>
   </nav>
   <img id="audirs7" src="pictures/audi-rs7.jpg" alt="AUDI-RS7">
