--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <li class="right"><a class="active" href="index.html">Start</a></li>
       <li class="right"><a href="info.html">Info</a></li>
       <li class="right"><a href="media.html">Medier</a></li>
-      <li class="right"><a href="fun.html">FUN</a></li>
+      <li class="right"><a href="fun.html">BYNKER</a></li>
     </ul>
   </nav>
   <div id="page-settings">
