--- a/media.html
+++ b/media.html
@@ -17,7 +17,7 @@
       <li class="right"><a href="index.html">Start</a></li>
       <li class="right"><a href="info.html">Info</a></li>
       <li class="right"><a class="active" href="media.html">Medier</a></li>
-      <li class="right"><a href="fun.html">FUN</a></li>
+      <li class="right"><a href="fun.html">BYNKER</a></li>
     </ul>
 
   </nav>
