new animation. version 2.1

--- a/info.html
+++ b/info.html
@@ -31,45 +31,55 @@
         <p> <img src="pictures/phone.png" alt="phone:" class="img-info"> 0761423664</p>
         <hr>
         <h3><img src="pictures/flake.png" alt="-.-" class="img-info"> SKILLS</h3>
-        <p class="info-text">Computer Fixing/Service</p>
+        <p class="info-text">Computer Fixing/Service 90%</p>
         <div class="barBackground">
+          <div class="bar-animation">
           <div class="barForeground" id="bar-pc">
-            <p class="barPercentage">90%</p>
+            </div>
           </div>
         </div>
-        <p class="info-text">Editing</p>
+        <p class="info-text">Editing 80%</p>
         <div class="barBackground">
+          <div class="bar-animation">
           <div class="barForeground" id="bar-edit">
-            <p class="barPercentage">80%</p>
+            </div>
           </div>
         </div>
-        <p class="info-text">HTML</p>
+        <p class="info-text">HTML 35%</p>
         <div class="barBackground">
+          <div class="bar-animation">
           <div class="barForeground" id="bar-html">
-            <p class="barPercentage">35%</p>
+          </div>
           </div>
         </div>
-        <p class="info-text">Coding</p>
+        <p class="info-text">Coding 25%</p>
         <div class="barBackground">
+          <div class="bar-animation">
           <div class="barForeground" id="bar-code">
-            <p class="barPercentage">25%</p>
+          </div>
           </div>
         </div>
         <hr>
         <h4><img src="pictures/globe.png" alt="" class="img-info"> Languages</h4>
         <p class="info-text">Svenska</p>
         <div class="barBackground">
+          <div class="bar-animation">
           <div class="barForeground" id="lang-bar-swe">
+            </div>
           </div>
         </div>
         <p class="info-text">Engelska</p>
         <div class="barBackground">
+          <div class="bar-animation">
           <div class="barForeground" id="lang-bar-eng">
+            </div>
           </div>
         </div>
         <p class="info-text">Tyska</p>
         <div class="barBackground">
+          <div class="bar-animation">
           <div class="barForeground" id="lang-bar-de">
+          </div>
           </div>
         </div>
       </div>
