--- a/fun.html
+++ b/fun.html
@@ -4,6 +4,7 @@
 <head>
   <link rel="stylesheet" href="css/Style.css">
   <link rel="stylesheet" href="css/Style2.css">
+  <link rel="stylesheet" href="css/Style3.css">
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
