--- a/media.html
+++ b/media.html
@@ -42,6 +42,8 @@
     <iframe src="https://www.youtube.com/embed/hlen7Z2BxTU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
   <button id="date-btn" onclick="getDate()">DATUM</button>
   <p id="datumet"></p>
+  <button id="random-btn" onclick="getRandom()">BYNKER</button>
+  <p id="random-numb"></p>
   <img id="counter" src="http://www.reliablecounter.com/count.php?page=alexanderlusth.github.io/website/&digit=style/plain/7/&reloads=0" alt="" title="" border="0">
   <footer id="footer">
     <div class="row">
@@ -55,6 +57,7 @@
       </div>
     </div>
   </footer>
+  <script src="javaScripts/random.js"></script>
   <script src="javaScripts/datetime.js"></script>
   <script src="javaScripts/startscript.js" charset="utf-8"></script>
 </body>
