added start icon

--- a/media.html
+++ b/media.html
@@ -15,7 +15,7 @@
 <body>
   <nav id="navmain">
     <ul id="navul" class="nav">
-      <li class="right"><a href="index.html">Start</a></li>
+      <li class="right"><a href="index.html">Start<img src="pictures/start-icon.png" alt="" class="img-nav"></a></li>
       <li class="right"><a href="info.html">Info</a></li>
       <li class="right"><a class="active" href="media.html">Medier</a></li>
       <li class="right"><a href="fun.html">BYNKER</a></li>
