--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
   <nav class="form-inline" id="navmain" class="pagerow">
     <ul id="navul" class="nav">
-      <li class="right"><a class="active" href="index.html">Start</a></li>
-      <li class="right"><a href="info.html">Info</a></li>
-      <li class="right"><a href="media.html">Medier</a></li>
-      <li class="right"><a href="fun.html">BYNKER</a></li>
+      <li id="nav-start" class="right"><a class="active" href="index.html">Start<img src="pictures/start-icon.png" alt="" class="img-nav"></a></li>
+      <li id="nav-info" class="right"><a href="info.html">info</a></li>
+      <li id="nav-media" class="right"><a href="media.html">Medier</a></li>
+      <li id="nav-bynker" class="right"><a href="fun.html">BYNKER</a></li>
     </ul>
   </nav>
   <div id="page-settings">
