added helags ui v2.2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="form-inline" id="navmain" class="pagerow">
     <ul id="navul" class="nav">
-      <li id="nav-start" class="right"><a class="active" href="index.html">Start<img src="pictures/start-icon.png" alt="" class="img-nav"></a></li>
+      <li id="nav-start" class="right"><a class="active" href="index.html">Start</a></li>
       <li id="nav-info" class="right"><a href="info.html">info</a></li>
       <li id="nav-media" class="right"><a href="media.html">Medier</a></li>
       <li id="nav-bynker" class="right"><a href="fun.html">BYNKER</a></li>
@@ -40,7 +40,13 @@
       </div>
     </div>
   </div>
-  <img id="helags" src="pictures/helags.JPG" alt="">
+  <div class="helags-img">
+  <img src="pictures/helags.JPG" alt="HELAGS" style="width:100%;">
+  <div class="helags-text">
+    <h1>Helags</h1>
+    <p>Bild från 2016</p>
+  </div>
+</div>
   <footer id="footer">
     <p id="footer-text">Layout made by Alexander Lusth</p>
   </footer>
